# cpptest

./: .gitignore  README.md
calculator/: CMakeLists.txt
calculator/src/: calculator.cpp
sample_library/: CMakeLists.txt
sample_library/include/: custom_math.hpp
sample_library/src/: custom_math.cpp
